@@ -1,5 +1,8 @@
 === xdg-utils 1.x.x ===
 
+2010-07-09 Rex Dieter <rdieter@fedoraproject.org> 
+    * xdg-screensaver: consider gnome-screensaver a separate DE (BR20027)
+
 2010-07-09 Rex Dieter <rdieter@fedoraproject.org>
     * xdg-mime : use 'gnomevfs-info --slow-mime' (BR 13939)
 
